--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
     right: 0px;
 }
 
-li>a.tappable-active {
+li>a.tappable-active, .selected {
     color: #fff;
     background-color: #4286f5;
 }
